--- a/templates/trips.html
+++ b/templates/trips.html
@@ -106,11 +106,11 @@
                             <div class="col s6 m8 l8">
                             </div>
                             <div class="buttons-box col s6 m4 l4">
-                                <a href="{{url_for('edit_trip', trip_id=trip._id)}}" class="invisible blue accent-2 btn-small waves-effect right">Edit</a>
-                                <a href="{{url_for('delete_trip', trip_id=trip._id)}}" class="invisible red lighten-3 btn-small waves-effect waves-light right">Delete</a>
+                                <a href="{{url_for('edit_trip', trip_id=trip._id)}}" class="user-btns accent-2 btn-small waves-effect right">Edit</a>
+                                <a href="{{url_for('delete_trip', trip_id=trip._id)}}" class="user-btns lighten-3 btn-small waves-effect waves-light right">Delete</a>
                             </div>
                         </div>
-                        </div>
+                        
                     </td>
                 </tr>         
             </tbody>
