--- a/templates/trips.html
+++ b/templates/trips.html
@@ -35,12 +35,12 @@
             <tbody>             
                 <tr class="trip-card">
                     <td class="trip-cell">
+                    {% for user in users %}
+                                        {% if trip.user|lower == user.name|lower %}
                         <div class="trip-main row">
                             <div class="col s12 m5 l5 xl5">
                                 <div class="row avatar-thumbnail">
                                     <div class="col s6 m6 l6 xl6">
-                                    {% for user in users %}
-                                        {% if trip.user|lower == user.name|lower %}
                                         <a href="#{{user.name}}" data-target="#{{user.name}}" data-tool-tip="See profile" class="avatar-title modal-trigger center"><strong>{{user.name}}</strong></a>
                                         <div class="avatar-div">
                                             <img class="avatar center" src="{{user.avatar}}" width="60" height="60"/>
@@ -64,9 +64,7 @@
                                             </div>                   
                                         </div>
                                         <!-- End - Modal structure for users' profiles -->
-                                        {% break %}
-                                        {% endif %}
-                                    {% endfor %}          
+                                              
                                     </div>
                                     <div class="col s6 m6 l6 xl6">
                                         <a class="trip-skiresort-title center" href="{{ url_for('ski_resorts')}}" data-tool-tip="See Ski Resorts"><strong>{{trip.location_name}}</strong></a>
@@ -105,12 +103,13 @@
                         <div class="buttons-row row">          
                             <div class="col s6 m8 l8">
                             </div>
-                            <div class="buttons-box col s6 m4 l4">
-                                <a href="{{url_for('edit_trip', trip_id=trip._id)}}" class="user-btns accent-2 btn-small waves-effect right">Edit</a>
-                                <a href="{{url_for('delete_trip', trip_id=trip._id)}}" class="user-btns lighten-3 btn-small waves-effect waves-light right">Delete</a>
-                            </div>
+                            {% if session['user']|lower == trip.user|lower %} 
+                            {% include 'trips_buttons.html' %}
+                            {% endif %}
                         </div>
-                        
+                        {% break %}
+                        {% endif %}
+                    {% endfor %}    
                     </td>
                 </tr>         
             </tbody>
