--- a/templates/ski_resorts.html
+++ b/templates/ski_resorts.html
@@ -67,10 +67,9 @@
                     <div class="row">
                         <div class="col s6 m8 l8">
                         </div>
-                        <div class="col s6 m4 l4">
-                            <a href="{{url_for('edit_skiresort', skiresort_id=skiresort._id)}}" class="user-btns  waves-effect waves-light btn-small right">Edit</a>
-                            <a href="{{url_for('delete_skiresort', skiresort_id=skiresort._id)}}" class="user-btns waves-effect waves-light btn-small right">Delete</a>
-                        </div>
+                        {% if session['user']|lower == skiresort.user|lower %} 
+                            {% include 'ski_resorts_buttons.html' %}
+                            {% endif %}
                     </div> 
                 </div>
             </td>
