Minor cleanup of html, css, js after validation services check

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -196,7 +196,7 @@ body{
 }
 
 .thumbnail-div{
-    padding: auto;
+    padding: 0;
 }
 
 .avatar-thumbnail{
@@ -238,7 +238,7 @@ body{
 }
 
 .avatar-div{
-    padding: auto;
+    padding: 0;
 }
 
 .avatar-title,
