--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <div class="row valign center-align">
         <div class="card col s12 blue lighten-5">
             <div class="card-panel blue darken-2">
-                <span class="white-text text-darken-2">
+                <div class="white-text text-darken-2">
                     <p class="intro-title">START / JOIN A SNOW TEAM</p>
                     <ul id="index-list">
                         <li><i class="fa fa-user-plus fa-fw"></i>&nbsp;&nbsp;&nbsp;SIGN UP</li>
@@ -14,7 +14,7 @@
                         <li><i class="fas fa-user-friends fa-fw"></i>&nbsp;&nbsp;&nbsp;TEAM UP</li>
                         <li><i class="fa fa-skiing fa-fw"></i>&nbsp;&nbsp;&nbsp;HIT THE SLOPES!</li>
                     </ul>
-                </span>
+                </div>
             </div>
         </div>
     </div>
