--- a/templates/trips.html
+++ b/templates/trips.html
@@ -82,8 +82,8 @@
                             </div>
                             <div class="col s12 m7 l7 xl7 center">
                                 <div class="col s6 m6 l6 xl6 ">
-                                    <p class="trip-p"><strong> {{trip.from}}</strong></p>
-                                    <p class="trip-p"><strong> {{trip.to}}</strong></p>
+                                    <p class="trip-p">From:   <strong> {{trip.from}}</strong></p>
+                                    <p class="trip-p">To:   <strong> {{trip.to}}</strong></p>
                                     <hr noshade color="#0056B2" style=";height:0.005px;width:70%">
                                     <p class="trip-p">ADULTS:   <strong>{{trip.adults}}</strong></p>
                                     <p class="trip-p">KIDS:   <strong>{{trip.kids}}</strong></p>
