--- a/templates/trips.html
+++ b/templates/trips.html
@@ -78,13 +78,13 @@
                                         </div>
                                     </div>
                                 </div>
-                                <hr class="invisible-hr" noshade color="#0056B2" style=";height:0.05px;width:90%">
+                                <hr class="invisible-hr hr-1" noshade >
                             </div>
                             <div class="col s12 m7 l7 xl7 center">
                                 <div class="col s6 m6 l6 xl6 ">
                                     <p class="trip-p">From:   <strong> {{trip.from}}</strong></p>
                                     <p class="trip-p">To:   <strong> {{trip.to}}</strong></p>
-                                    <hr noshade color="#0056B2" style=";height:0.005px;width:70%">
+                                    <hr noshade class="hr-2">
                                     <p class="trip-p">ADULTS:   <strong>{{trip.adults}}</strong></p>
                                     <p class="trip-p">KIDS:   <strong>{{trip.kids}}</strong></p>
                                     </div>
@@ -92,7 +92,7 @@
                                     <div>
                                         <p class="ski-snowboard-title"><strong>{{trip.ski_snowboard}}</strong></p>
                                     </div>
-                                    <hr noshade color="#0056B2" style=";height:0.005px;width:80%">
+                                    <hr noshade class="hr-3">
                                     <div>
                                         <p class="trip-p">INFO:</p> 
                                         <p class="trip-p"><strong>{{trip.other_info}}</strong></p>
