--- a/templates/ski_resorts.html
+++ b/templates/ski_resorts.html
@@ -10,8 +10,12 @@
                 <input type="text" name="query" id="query" class="validate" required>
             </div>
             <div class="col s12 m4 search-btn-box">
-                <a href="{{ url_for('ski_resorts') }}" class="search-btn red btn text-shadow">Reset</a>
-                <button type="submit" class="search-btn light-blue btn text-shadow">Search</button>
+                <div class="col s12 m12 l12">
+                    <a href="{{ url_for('ski_resorts') }}" class="search-btn red btn text-shadow">Reset</a>
+                </div>
+                <div class="col s12 m12 l12">
+                    <button type="submit" class="search-btn light-blue btn text-shadow">Search</button>
+                </div>
             </div>
         </div>
     </form>
