--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%} 
 {% block content %}
 
-<div class="container">
+<div id="index-main" class="container">
     <div class="row valign center-align">
         <div class="card col s12 blue lighten-5">
             <div class="card-panel blue darken-2">
