--- a/templates/ski_resorts.html
+++ b/templates/ski_resorts.html
@@ -31,8 +31,8 @@
                         <div class="col s12 m5 l5">
                             <div class="row"> 
                                 <div class="col s6 m6 l6">
-                                    <span class="location-name card-title"><h5>{{skiresort.location_name}}</h5></span>  
-                                    <span class=""><p class="skiresort-description">{{skiresort.description}}</p></span>
+                                    <span class="skiresort-title"><p >{{skiresort.location_name}}</p></span>  
+                                    <span><p class="skiresort-description">{{skiresort.description}}</p></span>
                                 </div>
                                 <div class="col s6 m6 l6 thumbnail-div">
                                     <img class="thumbnail" src="{{skiresort.thumbnail}}" width="85" height="85"/>
