--- a/templates/add_skiresort.html
+++ b/templates/add_skiresort.html
@@ -46,8 +46,8 @@
                         </div>
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">face</i>
-                            <select class="validate icons dropdown-content " id="thumbnail" name="thumbnail" required>
-                            <option value="" disabled selected>Choose a Thumbnail</option>
+                            <select class="validate icons dropdown-content" id="thumbnail" name="thumbnail" required>
+                            <option value="" disabled selected>Thumbnail</option>
                             <option value="/static/img/resorts_thumbs/mountain01.png" data-icon="/static/img/resorts_thumbs/mountain01.png">Peak</option>
                             <option value="/static/img/resorts_thumbs/mountain02.png" data-icon="/static/img/resorts_thumbs/mountain02.png">Glacier</option>
                             <option value="/static/img/resorts_thumbs/mountain03.png" data-icon="/static/img/resorts_thumbs/mountain03.png">Map</option>
