--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -13,7 +13,7 @@
                                 <i class="material-icons prefix">terrain</i>
                                 <select id="skiresort" name="skiresort" class="validate" required>
                                     <option value="" disabled selected>Choose Ski Resort</option>
-                                    {% for skiresort in skiresorts %}
+                                    {% for skiresort in skiresorts|sort(attribute="location_name") %}
                                         <option value="{{skiresort.location_name}}">{{skiresort.location_name}}</option>
                                     {% endfor %}
                                 </select>
