Minor brushing up

--- a/templates/edit_skiresort.html
+++ b/templates/edit_skiresort.html
@@ -35,7 +35,7 @@
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">brightness_3</i>
                                     <select class="icons dropdown-content" id="night" name="night" required aria-required="true">
-                                        <option value="{{skiresort.night}}" disabled selected>Night skiing: {{skiresort.night}}</option>
+                                        <option value="{{skiresort.night}}" disabled selected>Night: {{skiresort.night}}</option>
                                         <option value="yes">Yes</option>
                                         <option value="no">No</option>
                             </select>
