Added links to index.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,6 +51,10 @@ body{
 }
 /* Finish - Index page intro text with icons*/
 
+.index-link{
+    color: white;
+}
+
 /* Navbar */
 #navbar{
     background-color: #A4352C;
