Numbers for adults/kids set to be only positive

--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -31,11 +31,11 @@
                         </div>
                         <div class="input-field col s12 m6 l6">
                             <i class="material-icons prefix">supervisor_account</i>
-                            <input placeholder="how many adults?" id="adults" name="adults" type="number" class="validate" required>
+                            <input placeholder="how many adults?" id="adults" name="adults" type="number" min="0" class="validate" required>
                         </div>
                         <div class="input-field col s12 m6 l6">
                             <i class="material-icons prefix">child_care</i>
-                            <input placeholder="how many kids?" id="kids" name="kids" type="number" class="validate" required>
+                            <input placeholder="how many kids?" id="kids" name="kids" type="number" min="0" class="validate" required>
                         </div>
                         <div class="input-field col s12 m6 l6">
                             <i class="material-icons prefix">ac_unit</i>
