Removed required-validation from Addiotional info in new ski resort

--- a/templates/add_skiresort.html
+++ b/templates/add_skiresort.html
@@ -42,7 +42,7 @@
                         </div>
                         <div class="input-field col s12 m12 l12">
                             <i class="small material-icons prefix">comment</i>
-                            <input placeholder="additional info" id="other_info" name="other_info" type="text" class="validate" required>
+                            <input placeholder="additional info" id="other_info" name="other_info" type="text" class="validate">
                         </div>
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">face</i>
