Reset and Search buttons - same width

--- a/templates/ski_resorts.html
+++ b/templates/ski_resorts.html
@@ -11,7 +11,7 @@
             </div>
             <div class="col s12 m4 search-btn-box">
                 <div class="col s12 m12 l12">
-                    <a href="{{ url_for('ski_resorts') }}" class="search-btn red btn text-shadow">Reset</a>
+                    <a href="{{ url_for('ski_resorts') }}" class="search-btn red btn text-shadow"> &nbsp;Reset&nbsp;</a>
                 </div>
                 <div class="col s12 m12 l12">
                     <button type="submit" class="search-btn light-blue btn text-shadow">Search</button>
