--- a/templates/trips.html
+++ b/templates/trips.html
@@ -21,7 +21,7 @@
             </div>
             <div class="col s3 m2 search-btn-box">
                 <div class="row">
-                    <a href="{{ url_for('trips') }}" class="search-btn red btn text-shadow">Reset</a>
+                    <a href="{{ url_for('trips') }}" class="search-btn red btn text-shadow">&nbsp;Reset&nbsp;</a>
                     <button type="submit" class="search-btn light-blue btn text-shadow">Search</button>
                 </div>
             </div>
