--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,6 +36,15 @@ body{
     transform: translate(-50%, -50%);
 }
 
+#signup-select li img{
+    height: 30px;
+    width: 30px;
+}
+
+#signup-select li span{
+    font-size: 15px;
+}
+
 /* Index page intro text with icons */
 .fa, .fas{
     font-size: 24px;
