--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -40,7 +40,7 @@
                                     <i class="material-icons prefix">location_city</i>
                                     <input placeholder="you are from" id="from" name="from" type="text" class="validate" required>
                                 </div>
-                                <div class="input-field col s12 m6 l6 xl6">
+                                <div id="signup-select" class="input-field col s12 m6 l6 xl6">
                                     <i class="material-icons prefix">face</i>
                                     <select class="icons dropdown-content validate" id="avatar" name="avatar" aria-required="true" required>
                                         <option value="" disabled selected>Avatar</option>
